add /info endpoint
